--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Activity.MainActivity"
+        <activity android:name=".Activity.SplashActivity"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activity.MainActivity"
+            android:configChanges="orientation|screenSize">
+
         </activity>
 
         <receiver
@@ -34,7 +38,8 @@
         <activity
             android:name=".Activity.DetailsActivity"
             android:theme="@style/DetailsActivityTheme" />
-        <activity android:name=".Activity.BookmarksActivity"></activity>
+        <activity android:name=".Activity.BookmarksActivity" />
+
     </application>
 
 </manifest>
